--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -30,6 +30,10 @@ main {
   padding: 2px 4px !important; /* Reduce padding */
 }
 
+#nf-btn1 {
+  font-size: 0.9rem !important; /* Adjust as needed */
+  padding: 2px 4px !important; /* Reduce padding */
+}
 .notif-container {
   max-width: 290px !important; /* Smaller width */
   padding: 6px !important;
@@ -127,6 +131,11 @@ main {
     font-size: 0.8rem !important; /* Adjust as needed */
     padding: 2px 4px !important; /* Reduce padding */
   }
+  
+    #nf-btn1 {
+    font-size: 0.8rem !important; /* Adjust as needed */
+    padding: 2px 4px !important; /* Reduce padding */
+  }
 
   .notif-container {
     max-width: 280px !important; /* Smaller width */
@@ -167,10 +176,6 @@ main {
     min-height: 5vh;
     background-color: #faef9b;
     border: solid 1px #2b2b2b;
-    overflow-y: auto;
-  }
-  .space {
-    min-height: 5vh;
     overflow-y: auto;
   }
 }
