--- a/css/reusable.css
+++ b/css/reusable.css
@@ -405,9 +405,19 @@ nav {
 
 /* --------------------------------------------End: Notifications---------------------------------------------*/
 
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+
+/* Notifications Container */
+#notifications1 {
+  max-height: 350px;
+  /* Adjust based on your preference */
+  overflow-y: auto;
 }
+
+/* Button to open dropdown */
+#nf-btn1 {
+  cursor: pointer;
+}
+
+
+
+
